server name change

--- a/eureka-discovery.yml
+++ b/eureka-discovery.yml
@@ -3,7 +3,7 @@ server:
 
 eureka:
   instance:
-    hostname: localhost
+    hostname: eureka
   client:
     registerWithEureka: false
     fetchRegistry: false
