--- a/eureka-discovery.yml
+++ b/eureka-discovery.yml
@@ -4,6 +4,7 @@ server:
 eureka:
   instance:
     hostname: eureka
+    leaseRenewalIntervalInSeconds: 10
   client:
     registerWithEureka: false
     fetchRegistry: false
