--- a/eureka-discovery.yml
+++ b/eureka-discovery.yml
@@ -3,7 +3,7 @@ server:
 
 eureka:
   instance:
-    hostname: eureka
+    hostname: localhost
     leaseRenewalIntervalInSeconds: 10
   client:
     registerWithEureka: false
