--- a/zuul-proxy.yml
+++ b/zuul-proxy.yml
@@ -1,12 +1,12 @@
 server:
   port: 8060
 
-spring:
-  cloud:
-    gateway:
-      discovery:
-        locator:
-          enabled: true
+#spring:
+#  cloud:
+#    gateway:
+#      discovery:
+#        locator:
+#          enabled: true
 
 zuul:
   routes:
