--- a/zuul-proxy.yml
+++ b/zuul-proxy.yml
@@ -15,16 +15,16 @@ zuul:
       serviceId: test
 
 eureka:
-  #instance:
-  #  hostname: eureka
-  #  port: 8061
-    #leaseRenewalIntervalInSeconds: 10
+  instance:
+    hostname: eureka
+    port: 8061
+    leaseRenewalIntervalInSeconds: 10
   client:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
-      #defaultZone: http://${eureka.instance.hostname}:${eureka.instance.port}/eureka/
-      defaultZone: ${EUREKA_URI}
+      defaultZone: http://${eureka.instance.hostname}:${eureka.instance.port}/eureka/
+      #defaultZone: ${EUREKA_URI}
 
 logging:
   pattern: 
