--- a/zuul-proxy.yml
+++ b/zuul-proxy.yml
@@ -14,6 +14,10 @@ eureka:
     serviceUrl:
       defaultZone: ${EUREKA_URI}
 
+security:
+  basic:
+    enabled: false
+
 logging:
   pattern: 
     console: "%d{yyyy-MM-dd HH:mm:ss} ${LOG_LEVEL_PATTERN:-%5p} %m%n"
