--- a/eureka-discovery.yml
+++ b/eureka-discovery.yml
@@ -4,9 +4,13 @@ server:
 eureka:
   instance:
     hostname: localhost
-    leaseRenewalIntervalInSeconds: 10
+    leaseRenewalIntervalInSeconds: 2
+    leaseExpirationDurationInSeconds: 2
   client:
     registerWithEureka: false
     fetchRegistry: false
     serviceUrl:
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+  server:
+    evictionIntervalTimerInMs: 1000
+    response-cache-update-interval-ms: 1000  
