--- a/auth-service.yml
+++ b/auth-service.yml
@@ -7,6 +7,10 @@ eureka:
     fetchRegistry: true
     serviceUrl:
       defaultZone: ${EUREKA_URI}
+      
+security:
+  basic:
+    enabled: false
 
 security:
   oauth2:
@@ -41,7 +45,5 @@ github:
 logging:
   level:
     org.springframework.security: DEBUG 
-
-logging:
   pattern: 
     console: "%d{yyyy-MM-dd HH:mm:ss} ${LOG_LEVEL_PATTERN:-%5p} %m%n"
