--- a/zuul-proxy.yml
+++ b/zuul-proxy.yml
@@ -19,5 +19,7 @@ security:
     enabled: false
 
 logging:
+  level:
+    org.springframework.security: DEBUG 
   pattern: 
     console: "%d{yyyy-MM-dd HH:mm:ss} ${LOG_LEVEL_PATTERN:-%5p} %m%n"
