--- a/auth-service.yml
+++ b/auth-service.yml
@@ -1,5 +1,8 @@
 server:
   port: 8085
+  #use-forward-headers: false
+  servlet:
+    context-path: /uaa
 
 eureka:
   client:
@@ -42,6 +45,10 @@ github:
 
 logging:
   level:
+    ROOT: ERROR
+    org.springframework.web: ERROR
     org.springframework.security: DEBUG 
   pattern: 
-    console: "%d{yyyy-MM-dd HH:mm:ss} ${LOG_LEVEL_PATTERN:-%5p} %m%n"
+    #console: "%d{yyyy-MM-dd HH:mm:ss} ${LOG_LEVEL_PATTERN:-%5p} %m%n"
+    console: "%d{yyyy-MM-dd HH:mm:ss} ${LOG_LEVEL_PATTERN:-%5p} - %msg%n"
+    file: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"    
