--- a/zuul-proxy.yml
+++ b/zuul-proxy.yml
@@ -2,24 +2,46 @@ server:
   port: 8060
 
 zuul:
+  ignoredServices: "*" 
   routes:
     test:
+      sensitiveHeaders: 
       path: /test/**
       serviceId: test
-
+    auth-service:  
+      sensitiveHeaders:
+      path: /uaa/**
+      stripPrefix: false
+      serviceId: auth-service 
+      
 eureka:
   client:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
       defaultZone: ${EUREKA_URI}
-
+  server:
+    wait-time-in-ms-when-sync-empty: 3000 
+    
 security:
   basic:
     enabled: false
 
+endpoints:
+  restart:
+    enabled: true
+  shutdown:
+    enabled: true
+  health:
+    sensitive: false 
+    
 logging:
   level:
-    org.springframework.security: DEBUG 
-  pattern: 
-    console: "%d{yyyy-MM-dd HH:mm:ss} ${LOG_LEVEL_PATTERN:-%5p} %m%n"
+    org.springframework.security: DEBUG
+    ROOT: ERROR 
+    org.springframework.web: ERROR
+    com.enrico.microservices: DEBUG 
+  pattern:
+    console: "%d{yyyy-MM-dd HH:mm:ss} ${LOG_LEVEL_PATTERN:-%5p} - %msg%n"
+    file: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"  
+    #console: "%d{yyyy-MM-dd HH:mm:ss} ${LOG_LEVEL_PATTERN:-%5p} %m%n"
