--- a/auth-service.yml
+++ b/auth-service.yml
@@ -1,8 +1,8 @@
 server:
   port: 8085
   #use-forward-headers: false
-  servlet:
-    context-path: /uaa
+  #servlet:
+  #  context-path: /uaa
 
 eureka:
   client:
