--- a/zuul-proxy.yml
+++ b/zuul-proxy.yml
@@ -9,7 +9,7 @@ zuul:
       path: /test/**
       serviceId: test
     auth-service:  
-      #sensitiveHeaders:
+      sensitiveHeaders:
       path: /uaa/**
       stripPrefix: false
       serviceId: auth-service 
