--- a/auth-service.yml
+++ b/auth-service.yml
@@ -23,7 +23,11 @@ security:
       client-secret: acmesecret
       scope: read,write
       auto-approve-scopes: '.*'
-
+      access-token-uri: http://localhost:8085/oauth/token
+      user-authorization-uri: http://localhost:8085/oauth/authorize
+    resource:
+      user-info-uri: http://localhost:8085/me 
+      
 facebook:
   client:
     clientId: ${FB_CLIENTID}
