--- a/auth-service.yml
+++ b/auth-service.yml
@@ -12,7 +12,8 @@ eureka:
       defaultZone: ${EUREKA_URI}
   server: 
     wait-time-in-ms-when-sync-empty: 3000
-      
+
+spring:      
   datasource:
     url: jdbc:postgresql://postgres:${POSTGRES_PORT}/${POSTGRES_DB}?currentSchema=public
     username: ${POSTGRES_USER}
