--- a/zuul-proxy.yml
+++ b/zuul-proxy.yml
@@ -44,7 +44,7 @@ logging:
     org.springframework.security: DEBUG
     ROOT: ERROR 
     org.springframework.web: ERROR
-    com.enrico.microservices: DEBUG 
+    eu.babywarcher: DEBUG 
   pattern:
     console: "%d{yyyy-MM-dd HH:mm:ss} ${LOG_LEVEL_PATTERN:-%5p} - %msg%n"
     file: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"  
