--- a/ms-got.yml
+++ b/ms-got.yml
@@ -50,7 +50,7 @@ spring:
 
 logging:
   level:
-    ROOT: ERROR
+    ROOT: DEBUG
     eu.babywatcher: DEBUG
     org.springframework.web: DEBUG
     org.springframework.security: DEBUG 
