--- a/ms-got.yml
+++ b/ms-got.yml
@@ -7,7 +7,8 @@ server:
     enabled: false
 
 auth-server:
-  url: http://zuul:8060
+  url: http://auth:8085
+  #url: http://zuul:8060/uaa
 
 eureka:
   client:
