--- a/zuul-proxy.yml
+++ b/zuul-proxy.yml
@@ -21,7 +21,7 @@ zuul:
 eureka:
   client:
     registerWithEureka: true
-    fetchRegistry: true
+    fetchRegistry: false
     serviceUrl:
       defaultZone: ${EUREKA_URI}
   server:
