--- a/auth-service.yml
+++ b/auth-service.yml
@@ -45,7 +45,8 @@ spring:
     hibernate:
       #naming:
       #  physical-strategy: org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
-      ddl-auto: update
+      ddl-auto: create 
+      #update
       
 
 logging:
