--- a/auth-service.yml
+++ b/auth-service.yml
@@ -48,13 +48,83 @@ spring:
       ddl-auto: create 
       #update
       
+social.auto-signup: false
+
+# Google
+# http://localhost:8080/auth/google
+google.client.id=${GOOGLE_APPID}
+#160790488111-he5fn6rq0foqg05te70dk25gifeoum9s.apps.googleusercontent.com
+google.client.secret=${GOOGLE_SECRET}
+#VILTmX1UjOnyw2_meYvDQEdl
+google.scope=https://www.googleapis.com/auth/userinfo.email https://www.googleapis.com/auth/userinfo.profile
+ 
+# Facebook
+# http://localhost:8080/auth/facebook
+#facebook.scope=public_profile,email
+security:
+  oauth2:
+    client:
+      client-id: acme
+      client-secret: acmesecret
+      access-token-uri: http://auth:8085/uaa/oauth/token
+      user-authorization-uri: http://auth:8085/uaa/oauth/authorize
+      scope: read,write
+      auto-approve-scopes: '.*'
+      #clientId: ${FB_APPID}
+      #clientSecret: ${FB_SECRET}
+      #accessTokenUri: https://graph.facebook.com/oauth/access_token
+      #userAuthorizationUri: https://www.facebook.com/dialog/oauth
+      #tokenName: oauth_token
+      #authenticationScheme: query
+      #clientAuthenticationScheme: form
+    #resource:
+      #userInfoUri: https://graph.facebook.com/me
+facebook:
+  client:
+    clientId: ${FB_APPID}
+    clientSecret: ${FB_SECRET}
+    accessTokenUri: https://graph.facebook.com/oauth/access_token
+    userAuthorizationUri: https://www.facebook.com/dialog/oauth
+    tokenName: oauth_token
+    authenticationScheme: query
+    clientAuthenticationScheme: form
+  resource:
+    userInfoUri: https://graph.facebook.com/me
+
+#github
+github:
+  client:
+    clientId: bd1c0a783ccdd1c9b9e4
+    clientSecret: 1a9030fbca47a5b2c28e92f19050bb77824b5ad1
+    accessTokenUri: https://github.com/login/oauth/access_token
+    userAuthorizationUri: https://github.com/login/oauth/authorize
+    clientAuthenticationScheme: form
+  resource:
+    userInfoUri: https://api.github.com/user 
+
+# Twitter
+# http://localhost:8080/auth/twitter
+twitter:
+  consumer:
+    key:
+    secret:
+  scope:       
+ 
+# Linkedin
+# http://localhost:8080/auth/linkedin
+linkedin:
+  consumer:
+    key:
+    secret:
+  scope:
 
 logging:
   level:
     ROOT: DEBUG
     eu.babywatcher: DEBUG
     org.springframework.web: DEBUG
-    org.springframework.security: DEBUG 
+    org.springframework.security: DEBUG
+    #file: /tmp/logs/ms-got.log 
   pattern: 
     #console: "%d{yyyy-MM-dd HH:mm:ss} ${LOG_LEVEL_PATTERN:-%5p} %m%n"
     console: "%d{yyyy-MM-dd HH:mm:ss} ${LOG_LEVEL_PATTERN:-%5p} - %msg%n"
