--- a/auth-service.yml
+++ b/auth-service.yml
@@ -57,7 +57,11 @@ google:
   client:
     id: ${GOOGLE_APPID}
     secret: ${GOOGLE_SECRET}
-  scope: "https://www.googleapis.com/auth/userinfo.email https://www.googleapis.com/auth/userinfo.profile"
+    scope: "https://www.googleapis.com/auth/userinfo.email https://www.googleapis.com/auth/userinfo.profile"
+    accessTokenUri: https://google.com/login/oauth/access_token
+    userAuthorizationUri: https://google.com/login/oauth/authorize
+    clientAuthenticationScheme: form
+    
 #160790488111-he5fn6rq0foqg05te70dk25gifeoum9s.apps.googleusercontent.com
 #google.client.secret=${GOOGLE_SECRET}
 #VILTmX1UjOnyw2_meYvDQEdl
