--- a/auth-service.yml
+++ b/auth-service.yml
@@ -55,8 +55,8 @@ social.auto-signup: false
 # http://localhost:8080/auth/google
 google:
   client:
-    id: ${GOOGLE_CLIENTID}
-    secret: ${GOOGLE_CLIENTSECRET}
+    clientId: ${GOOGLE_CLIENTID}
+    clientSecret: ${GOOGLE_CLIENTSECRET}
     scope: "https://www.googleapis.com/auth/userinfo.email https://www.googleapis.com/auth/userinfo.profile"
     accessTokenUri: https://google.com/login/oauth/access_token
     userAuthorizationUri: https://google.com/login/oauth/authorize
